--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width,user-scalable=no">
   </head>
   <body>
+  	<script>
+  		document.addEventListener("touchstart",function(e){
+  			e.preventDefault();
+  		})
+  	</script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
